# hotels-webapp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  sonar-project.properties
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.production  Makefile  pyproject.toml
backend/app/accounts/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/app/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_group_remove_user_primary_group_alter_user_email_and_more.py  0004_remove_user_is_staff_remove_user_is_superuser_and_more.py  0005_guest.py  0006_remove_administrator_is_owner_delete_employee.py
backend/app/accounts/tests/: test_admin_api.py  test_guest_api.py  test_login.py  test_logout.py  test_me_api.py  test_models.py  test_moderator_api.py  test_password_reset_api.py  test_refresh.py  test_registration.py  test_user_api.py
backend/app/accounts/utils/: helpers.py  validators.py
backend/app/bookings/: admin.py  apps.py  models.py
backend/app/bookings/migrations/: 0001_initial.py  0002_alter_booking_options_alter_review_options_and_more.py  0003_alter_review_options_and_more.py  0004_remove_booking_booking_cancelled_at_required_and_more.py  0005_alter_booking_total_price.py  0006_bookingpayment_cancelledbooking_and_more.py  0007_alter_booking_options_and_more.py  0009_alter_booking_status.py
backend/app/bookings/tests/: test_bookings_api.py  test_models.py
backend/app/hotels/: admin.py  apps.py  models.py  serializers.py  views.py
backend/app/hotels/migrations/: 0001_initial.py  0002_alter_roomphoto_photo_path.py  0003_remove_room_unique_floor_per_hotel_and_more.py  0004_alter_roomtype_size.py  0005_alter_room_floor.py  0006_hotel_floor_count_alter_room_floor.py  0007_alter_room_options.py  0008_roomcategory_alter_hotel_options_and_more.py  0009_seed_room_categories.py  (+1 more)
backend/config/: settings.py  urls.py
backend/fixtures/: auth_data.json  bookings_data.json  hotels_data.json  users_data.json
backend/utils/: normalizers.py  parsers.py  validators.py
(+51 files in other folders)
