[project]
name = "hotels-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-health-check>=4.4.1",
    "django-phonenumber-field>=8.4.0",
    "djangorestframework",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested-routers>=0.95.0",
    "gunicorn>=23.0.0",
    "phonenumberslite>=9.0.27",
    "pillow>=12.2.0",
    "psycopg2-binary",
    "python-decouple",
]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "drf-spectacular>=0.29.0",
    "faker>=40.13.0",
    "pytest",
    "pytest-django",
    "ruff",
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/settings*",
    "manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/admin.py",
    "*/apps.py",
    "conftest.py",
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_also = [
    'if settings.DEBUG',
]
